Header And Landing Section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,34 @@
 </head>
 
 <body>
-    <div class="parent">
-        <div class="container">
-            Test text
+   <!--Start Header-->
+   <div class="header">
+    <div class="container">
+        <img class="logo" src="img/logo.png" alt="logo">
+        <div class="links">
+            <span class="icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
     </div>
+   </div>
+   <!--End Header-->
+   <!-- Start Landing Section -->
+   <div class="landing">
+    <div class="intro-text">
+        <h1>Hello There</h1>
+        <p>Welcome to My Template .. This is my frist real Project </p>
+    </div>
+   </div>
+   <!-- End Landing Section -->
   
 </body>
 
