--- a/index.html
+++ b/index.html
@@ -21,35 +21,58 @@
 </head>
 
 <body>
-   <!--Start Header-->
-   <div class="header">
-    <div class="container">
-        <img class="logo" src="img/logo.png" alt="logo">
-        <div class="links">
-            <span class="icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <ul>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+    <!--Start Header-->
+    <div class="header">
+        <div class="container">
+            <img class="logo" src="img/logo.png" alt="logo">
+            <div class="links">
+                <span class="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-   </div>
-   <!--End Header-->
-   <!-- Start Landing Section -->
-   <div class="landing">
-    <div class="intro-text">
-        <h1>Hello There</h1>
-        <p>Welcome to My Template .. This is my frist real Project </p>
+    <!--End Header-->
+    <!-- Start Landing Section -->
+    <div class="landing">
+        <div class="intro-text">
+            <h1>Hello There</h1>
+            <p>Welcome to My Template .. This is my frist real Project </p>
+        </div>
     </div>
-   </div>
-   <!-- End Landing Section -->
-  
+    <!-- End Landing Section -->
+    <!-- Start Features Section -->
+    <div class="features">
+        <div class="container">
+            <div class="feat">
+                <i class="fas fa-magic fa-3x"></i>
+                <h3>Tell Us Your Idea</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at
+                    voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?</p>
+            </div>
+            <div class="feat">
+                <i class="fas fa-gem fa-3x"></i>
+                <h3>We Will Do All The Work</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at
+                    voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?</p>
+            </div>
+            <div class="feat">
+                <i class="fas fa-globe-africa fa-3x"></i>
+                <h3>Your Product is Worldwide</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at
+                    voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Features Section -->
 </body>
 
 </html>
