--- a/index.html
+++ b/index.html
@@ -73,6 +73,78 @@
         </div>
     </div>
     <!-- End Features Section -->
+    <!-- Start Services Section -->
+    <!-- Start Services Section -->
+    <div class="services">
+        <div class="container">
+            <h2 class="special-heading">Services</h2>
+            <p>Don't be busy, be productive</p>
+            <div class="services-content">
+               <div class="col">
+                <!-- Start Service -->
+                <div class="srv">
+                    <i class="fas fa-palette fa-2x"></i>
+                    <div class="text">
+                        <h3>
+                            Graphic Design
+                        </h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
+                        </p>
+                    </div>
+                </div>
+                <!-- End Service -->
+                <!-- Start Service -->
+                <div class="srv">
+                    <i class="fas fa-gem fa-2x"></i>
+                    <div class="text">
+                        <h3>
+                            UI & UX
+                        </h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
+                        </p>
+                    </div>
+                </div>
+                <!-- End Service -->
+               </div> 
+               <div class="col">
+                <!-- Start Service -->
+                <div class="srv">
+                    <i class="fas fa-vector-square fa-2x"></i>
+                    <div class="text">
+                        <h3>
+                            Graphic Design
+                        </h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
+                        </p>
+                    </div>
+                </div>
+                <!-- End Service -->
+                <!-- Start Service -->
+                <div class="srv">
+                    <i class="fas fa-pencil-ruler fa-2x"></i>
+                    <div class="text">
+                        <h3>
+                            UI & UX
+                        </h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
+                        </p>
+                    </div>
+                </div>
+                <!-- End Service -->
+               </div> 
+               <div class="col">
+                <div class="image image-column">
+                    <img src="img/download.jpg" alt="">
+                </div>
+               </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services Section -->
 </body>
 
 </html>
