--- a/index.html
+++ b/index.html
@@ -145,6 +145,40 @@
         </div>
     </div>
     <!-- End Services Section -->
+    <!-- Start Portfolio Section -->
+    <div class="portfolio">
+        <div class="container">
+            <h2 class="special-heading">Portfolio</h2>
+            <p>If you do it right, it will last forever</p>
+            <div class="portfolio-content">
+               <div class="card">
+                 <img src="img/portfolio-image.jpg" alt="">
+                 <div class="info">
+                    <h3>Project Here</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                    </p>
+                 </div>
+               </div>
+               <div class="card">
+                <img src="img/portfolio-image.jpg" alt="">
+                <div class="info">
+                   <h3>Project Here</h3>
+                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                   </p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="img/portfolio-image.jpg" alt="">
+                <div class="info">
+                   <h3>Project Here</h3>
+                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                   </p>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Portfolio Section -->
 </body>
 
 </html>
