--- a/index.html
+++ b/index.html
@@ -80,67 +80,75 @@
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
             <div class="services-content">
-               <div class="col">
-                <!-- Start Service -->
-                <div class="srv">
-                    <i class="fas fa-palette fa-2x"></i>
-                    <div class="text">
-                        <h3>
-                            Graphic Design
-                        </h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
-                        </p>
+                <div class="col">
+                    <!-- Start Service -->
+                    <div class="srv">
+                        <i class="fas fa-palette fa-2x"></i>
+                        <div class="text">
+                            <h3>
+                                Graphic Design
+                            </h3>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat
+                                sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat
+                                quos facere ea! Omnis?
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Service -->
+                    <!-- Start Service -->
+                    <div class="srv">
+                        <i class="fas fa-gem fa-2x"></i>
+                        <div class="text">
+                            <h3>
+                                UI & UX
+                            </h3>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat
+                                sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat
+                                quos facere ea! Omnis?
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Service -->
+                </div>
+                <div class="col">
+                    <!-- Start Service -->
+                    <div class="srv">
+                        <i class="fas fa-vector-square fa-2x"></i>
+                        <div class="text">
+                            <h3>
+                                Graphic Design
+                            </h3>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat
+                                sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat
+                                quos facere ea! Omnis?
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Service -->
+                    <!-- Start Service -->
+                    <div class="srv">
+                        <i class="fas fa-pencil-ruler fa-2x"></i>
+                        <div class="text">
+                            <h3>
+                                UI & UX
+                            </h3>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat
+                                sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat
+                                quos facere ea! Omnis?
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Service -->
+                </div>
+                <div class="col">
+                    <div class="image image-column">
+                        <img src="img/download.jpg" alt="">
                     </div>
                 </div>
-                <!-- End Service -->
-                <!-- Start Service -->
-                <div class="srv">
-                    <i class="fas fa-gem fa-2x"></i>
-                    <div class="text">
-                        <h3>
-                            UI & UX
-                        </h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
-                        </p>
-                    </div>
-                </div>
-                <!-- End Service -->
-               </div> 
-               <div class="col">
-                <!-- Start Service -->
-                <div class="srv">
-                    <i class="fas fa-vector-square fa-2x"></i>
-                    <div class="text">
-                        <h3>
-                            Graphic Design
-                        </h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
-                        </p>
-                    </div>
-                </div>
-                <!-- End Service -->
-                <!-- Start Service -->
-                <div class="srv">
-                    <i class="fas fa-pencil-ruler fa-2x"></i>
-                    <div class="text">
-                        <h3>
-                            UI & UX
-                        </h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos animi hic fugiat sunt et cum at voluptatem delectus repellendus qui nihil vero quod magnam, id repellat quos facere ea! Omnis?
-                        </p>
-                    </div>
-                </div>
-                <!-- End Service -->
-               </div> 
-               <div class="col">
-                <div class="image image-column">
-                    <img src="img/download.jpg" alt="">
-                </div>
-               </div>
             </div>
         </div>
     </div>
@@ -151,34 +159,60 @@
             <h2 class="special-heading">Portfolio</h2>
             <p>If you do it right, it will last forever</p>
             <div class="portfolio-content">
-               <div class="card">
-                 <img src="img/portfolio-image.jpg" alt="">
-                 <div class="info">
-                    <h3>Project Here</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
-                    </p>
-                 </div>
-               </div>
-               <div class="card">
-                <img src="img/portfolio-image.jpg" alt="">
-                <div class="info">
-                   <h3>Project Here</h3>
-                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
-                   </p>
+                <div class="card">
+                    <img src="img/portfolio-image.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt
+                            ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum
+                            consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                        </p>
+                    </div>
                 </div>
-              </div>
-              <div class="card">
-                <img src="img/portfolio-image.jpg" alt="">
-                <div class="info">
-                   <h3>Project Here</h3>
-                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
-                   </p>
+                <div class="card">
+                    <img src="img/portfolio-image.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt
+                            ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum
+                            consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                        </p>
+                    </div>
                 </div>
-              </div>
+                <div class="card">
+                    <img src="img/portfolio-image.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, similique nihil sunt
+                            ipsam, eius reiciendis doloremque, necessitatibus fuga eum dolor impedit fugiat! Illum
+                            consequuntur, totam mollitia aspernatur placeat ipsum recusandae.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- End Portfolio Section -->
+    <!-- Start About Section -->
+    <div class="about">
+        <div class="container">
+            <h2 class="special-heading">About</h2>
+            <p>Less is More Work</p>
+            <div class="about-content">
+                    <div class="image">
+                        <img src="img/about.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi adipisci mollitia, laborum molestiae?</p>
+                        <hr>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi adipisci mollitia, laborum molestiae?</p>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Portfolio Section -->
+
+
 </body>
 
 </html>
