Contact and Footer Sections

--- a/index.html
+++ b/index.html
@@ -199,20 +199,46 @@
             <h2 class="special-heading">About</h2>
             <p>Less is More Work</p>
             <div class="about-content">
-                    <div class="image">
-                        <img src="img/about.jpg" alt="">
-                    </div>
-                    <div class="text">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi adipisci mollitia, laborum molestiae?</p>
-                        <hr>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi adipisci mollitia, laborum molestiae?</p>
-                    </div>
+                <div class="image">
+                    <img src="img/about.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem
+                        pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi
+                        adipisci mollitia, laborum molestiae?</p>
+                    <hr>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quod ea aliquid voluptatem
+                        pariatur quaerat dolorum odio, tenetur maiores officiis at, laborum repudiandae. Sunt quod animi
+                        adipisci mollitia, laborum molestiae?</p>
+                </div>
             </div>
         </div>
     </div>
     <!-- End Portfolio Section -->
+    <!-- Start Contact Section -->
+    <div class="contact">
+        <div class="container">
+            <h2 class="special-heading">Contact</h2>
+            <p>We are born to Create</p>
+            <div class="info">
+                <p class="label"> Feel Free to Drop us a line at: </p>
+                <a href="mailto:shehab.taher93@gmail.com?subject=Contact" class="link">shehab.taher93@gmail.com</a>
+                <div class="social">
+                    Find Us on Social Network
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
 
-
+            </div>
+        </div>
+    </div>
+    <!-- End Contact Section -->
+<!-- Start Footer Section -->
+    <div class="footer">
+        &copy; 2021 <span>Shehab</span> all Rights Reserved
+    </div>
+<!-- End Footer Section -->
 </body>
 
 </html>
