--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- End Features Section -->
     <!-- Start Services Section -->
     <!-- Start Services Section -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
@@ -154,7 +154,7 @@
     </div>
     <!-- End Services Section -->
     <!-- Start Portfolio Section -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">Portfolio</h2>
             <p>If you do it right, it will last forever</p>
@@ -194,7 +194,7 @@
     </div>
     <!-- End Portfolio Section -->
     <!-- Start About Section -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <h2 class="special-heading">About</h2>
             <p>Less is More Work</p>
@@ -216,7 +216,7 @@
     </div>
     <!-- End Portfolio Section -->
     <!-- Start Contact Section -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <h2 class="special-heading">Contact</h2>
             <p>We are born to Create</p>
